--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
+    "hexo-tag-plantuml": "^1.0.0",
     "uglify-js": "^3.3.9"
   }
 }
