--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://ttom921.github.io
 root: /
-permalink: :year/:month/:day/:title/
+#permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 
 # Directory
@@ -28,7 +29,8 @@ i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+#new_post_name: :title.md # File name of new posts
+new_post_name: :title\:title.md 
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
