--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ skip_render:
 
 # Writing
 #new_post_name: :title.md # File name of new posts
-new_post_name: :title\:title.md 
+new_post_name: :title/:title.md 
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
