--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Tom的記錄
+title: 被施工的Tom的記錄
 subtitle: 異想世界
 description: 記錄有的沒有的
 author: Tom Tang
