--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,13 @@
-# This file is a template, and might need editing before it works on your project.
-# Full project: https://gitlab.com/pages/hexo
 image: node:4.2.2
 
-cache:
-  paths:
-  - node_modules/
-
-before_script:
-  - export TZ='Asia/Shanghai'
-  - git config --global user.name "ttom921"
-  - git config --global user.email "ttom921@hotmail.com"
-  - npm install -g hexo
-  - npm install -g hexo-cli
-  - npm install
-
 pages:
-  stage: deploy
+  cache:
+    paths:
+    - node_modules/
+
   script:
-  - hexo clean
-  - hexo generate
+  - npm install hexo-cli -g
+  - npm install
   - hexo deploy
   artifacts:
     paths:
