--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,11 @@
-#
-image: node:8.9.4
-
-cache:
-    paths:
-        - node_modules/
-
-variables:
-    GIT_SUBMODULE_STRATEGY: recursive
-
-before_script:
-    - npm install hexo-cli -g
-    - npm install
-
 pages:
-    script:
-        - hexo generate
-    artifacts:
-        paths:
-            - public
-    only:
-        - master
+  stage: deploy
+  script:
+  - mkdir .public
+  - cp -r * .public
+  - mv .public public
+  artifacts:
+    paths:
+    - public
+  only:
+  - master
