--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,14 @@
+image: node:8.9.4
 pages:
-  stage: deploy
-  script:
-  - mkdir .public
-  - cp -r * .public
-  - mv .public public
-  artifacts:
+cache:
+    paths:
+    - node_modules/
+script:
+- npm install hexo-cli -g
+- npm install
+- hexo deploy
+artifacts:
     paths:
     - public
-  only:
-  - master
+only:
+- maste
